--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <meta name="theme-color" content="#0a84ff">
   <title>Dean Kath Rose — Tic Tac Toe</title>
+  <link rel="apple-touch-icon" sizes="180x180" href="icon.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="icon.png">
   <style>
     :root{
       --bg:#f6f7fb; --fg:#0b0b0f; --muted:#707584; --card:#ffffff;
